# MainProject

./: CMakeLists.txt
src/: CatmullSpline.h  Depth.h  Dot.h  LightArtSystem.cpp  LightArtSystem.hpp  Log.cpp  Log.h  NeonDesign.h  NtKinect.h  kinectv2_2.0.cpp
src/algorithm/: CVContourLineExtractionAlgorithm.cpp  CVContourLineExtractionAlgorithm.hpp  ContourLineExtractionAlgorithm.h
src/effect/: AfterImageEffect.cpp  AfterImageEffect.hpp  EffectComponent.cpp  EffectComponent.hpp  EffectDecorator.cpp  EffectDecorator.hpp
src/image/: Image.h  ImageBuilder.cpp  ImageBuilder.hpp  OpenCVImage.cpp  OpenCVImage.hpp  OpenCVImageBuilder.cpp  OpenCVImageBuilder.hpp
src/toolkit/: OpenCVToolkitBuilder.cpp  OpenCVToolkitBuilder.hpp  ToolkitBuilder.cpp  ToolkitBuilder.hpp
src/ui/: OpenCVVideoCapture.cpp  OpenCVVideoCapture.hpp  VideoCapture.cpp  VideoCapture.hpp
